--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моё резюме</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Моё резюме</title>
 </head>
 
 <body>
-
+  <header class="header">
+    <img class="myPhoto" src="img/myPhoto.jpg" alt="myPhoto">
+  </header>
 </body>
 
 </html>
